[package]
name = "racco"
version = "0.7.0"
authors = ["Daichi Sakai <daisaru11@gmail.com>"]
license = "MIT"
repository = "https://github.com/micin-jp/racco"
edition = "2021"

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
async-trait = "0.1.52"
clap = "2.26.0"
env_logger = "0.3"
hyper = "0.10.0"
termion = "1.5.1"
log = "0.3"
handlebars = "0.29.1"
rusoto_core = {version = "0.47.0"}
rusoto_credential = {version = "0.47.0"}
rusoto_ecs = {version = "0.47.0"}
rusoto_ssm = {version = "0.47.0"}
rusoto_events = {version = "0.47.0"}
serde = "1.0"
serde_derive = "1.0.8"
serde_yaml = "0.8"
serde_json = "1.0"
tabwriter = "1"
semver = "0.7.0"
